STAJ_CIKTILARI/Hafta_1/Hafta_2/manifests/project/06-wordpress/mysql-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      env: production
  template:
    metadata:
      labels:
        app: mysql
        env: production
    spec:
      nodeSelector:
        kubernetes.io/hostname: staj-cluster-worker2
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "production"
          effect: "NoSchedule"
      containers:
        - name: mysql
          image: mariadb:10.6
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: mysql
    env: production
  ports:
    - port: 3306
      targetPort: 3306
