STAJ_CIKTILARI/Hafta_1/Hafta_2/manifests/project/06-wordpress/wordpress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      env: test
  template:
    metadata:
      labels:
        app: wordpress
        env: test
    spec:
      nodeSelector:
        kubernetes.io/hostname: staj-cluster-worker
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          volumeMounts:
            - name: wordpress-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: wordpress
    env: test
  ports:
    - port: 80
      targetPort: 80
